static/css/leaderboard.css
/* Enable scrolling again */
body, html {
    overflow: auto;
    padding-bottom: 100px;
}

/* Styling links */
a {
    color: var(--link-color);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

/* Section headings */
h2 {
    padding-bottom: 10px;
}

/* Container for both sections */
.dashboard-container {
    margin: 0 auto;
    width: 90vw;

    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    padding-top: 1em;
    gap: 2em;
}

/* Individual panels */
.dashboard-panel {
    flex: 1 1 18em;
    background-color: var(--light-bg-color);
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    height: 600px;
    overflow-y: auto;
}

/* Table styling */
table {
    max-height: 600px;
}

/* Re-enable page scroll */
html, body {
    overflow: auto;
}


/* Current user has "You" suffix  */
tr#current-user td#username-data::after {
    content: " (You)"
}

main {
    max-width: 80em;
    margin: 0 auto;
}


/* Format chart */
#leaderboard-chart-container {
    height: 50vh;
    width: 90vw;
    max-width: 100%;
    margin: 0 auto;
}

#leaderboard-heading {
    text-align: center;
    padding-top: 20px;
}

